<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:endIconMode="password_toggle"
            android:layout_marginTop="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login Email"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login with Google"
            android:icon="@drawable/ic_google"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <TextView
            android:id="@+id/to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Belum punya akun? Register di sini"
            android:textColor="?attr/colorPrimary"
            android:paddingTop="24dp"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>
